# kosmos

./: CMakeLists.txt  README  README.md
cmake/: FindFreeType.cmake  FindGLEW.cmake
data/: 2D_luminance.f.glsl  2D_luminance.v.glsl  2D_notexture.f.glsl  2D_notexture.v.glsl  lighting.f.glsl  lighting.v.glsl  simple.f.glsl  simple.v.glsl  sol.ini  teapot.ply  text.f.glsl  text.v.glsl
src/: CMakeLists.txt  FindAllegro.cmake  FindGLEW.cmake  Makefile  camera.c  camera.h  font.c  font.h  glm.c  glm.h  input.c  input.h  keplerorbit.c  keplerorbit.h  linereader.c  linereader.h  log.c  log.h  mathlib.h  matrix.c  matrix.h  mesh.c  mesh.h  meshinfo.c  orbit.c  orbit.h  orrery.c  quaternion.c  quaternion.h  render.c  render.h  renderer_progr.c  shader.c  shader.h  shadow.c  sol.c  solarsystem.c  solarsystem.h  stats.c  stats.h  (+9 more)
